# hokulea

./: .example.env  .gitignore  Cargo.toml  README.md  justfile  kurtosis_params.yaml  kurtosis_params_holesky_l1.yaml  mise.toml  op-devnet.docker-compose.yml.patch  rust-toolchain.toml
.github/workflows/: elf.yml  kurtosis_devnet.yaml  rust_ci.yaml
canoe/: README.md
canoe/bindings/: Cargo.toml
canoe/bindings/src/: lib.rs
canoe/contracts/eigenda-bindings/: Cargo.toml
canoe/contracts/eigenda-bindings/src/: IEigenDACertVerifier.json  lib.rs
canoe/contracts/mock/broadcast/DeployAlwaysTrue.s.sol/3151908/: run-1746044057.json  run-1746050129.json  run-1746050333.json
canoe/contracts/mock/script/: DeployAlwaysTrue.s.sol
canoe/contracts/mock/src/: AlwaysTrue.sol  EigenDACertMockVerifier.sol
canoe/contracts/mock/test/: AlwaysTrue.sol  EigenDACertMockVerifier.sol
canoe/provider/: Cargo.toml
canoe/provider/src/: canoe_input.rs  canoe_provider.rs  lib.rs  verifier_caller.rs
canoe/sp1-cc/client/: Cargo.toml
canoe/sp1-cc/client/src/: main.rs
canoe/sp1-cc/elf/: canoe-sp1-cc-client  canoe-sp1-cc-client.vkey.json
canoe/sp1-cc/host/: Cargo.toml  build.rs
canoe/sp1-cc/host/src/: genesis.json  lib.rs
canoe/sp1-cc/verifier/: Cargo.toml
canoe/sp1-cc/verifier/src/: lib.rs
canoe/sp1-cc/vkey-bin/: Cargo.toml
canoe/sp1-cc/vkey-bin/src/: main.rs
canoe/sp1-contract-call/client/: Cargo.toml
canoe/sp1-contract-call/host/: Cargo.toml
canoe/sp1-contract-call/host/src/: main.rs
canoe/steel/apps/: Cargo.toml
canoe/steel/apps/src/: apps.rs  provider.rs
canoe/steel/methods/: Cargo.toml  build.rs
canoe/steel/methods/contracts/: Elf.sol  ImageID.sol
canoe/steel/methods/guest/: Cargo.toml
canoe/steel/verifier/: Cargo.toml
canoe/steel/verifier/src/: lib.rs
canoe/verifier/: Cargo.toml
canoe/verifier-address-fetcher/src/: lib.rs
canoe/verifier/src/: chain_spec.rs  lib.rs  verifier.rs
crates/client/: Cargo.toml  README.md
crates/client/src/: core_client.rs  fp_client.rs  lib.rs  native_client.rs  witgen_client.rs  witness.rs
crates/compute-kzg-proof/: Cargo.toml  README.md
crates/compute-kzg-proof/src/: compute_kzg_proof.rs  lib.rs
crates/compute-proof/: Cargo.toml  build.rs
crates/compute-proof-kzg/: Cargo.toml
crates/compute-proof/src/: kzg_proof.rs  lib.rs  view_proof.rs
crates/compute-proof/src/steel/: mod.rs
crates/cryptography/: Cargo.toml  README.md
crates/cryptography/src/: witness.rs
crates/eigenda/: Cargo.toml
crates/eigenda-cert/: Cargo.toml
crates/eigenda-cert/examples/: commitment_to_abi.rs
crates/eigenda-cert/src/: altda_commitment.rs  lib.rs  v2_cert.rs  v3_cert.rs  v4_cert.rs
crates/eigenda-v2-struct/: Cargo.toml
crates/eigenda-v2-struct/src/: lib.rs  sol_struct.rs  v2_cert.rs  v3_cert.rs
crates/eigenda/src/: altda_commitment.rs  cert_metadata.rs  certificate.rs  codec.rs  constant.rs  eigenda.rs  eigenda_blobs.rs  eigenda_data.rs  eigenda_preimage.rs  errors.rs  lib.rs  test_utils.rs  traits.rs  version.rs
crates/kzg-crypto/: Cargo.toml
crates/kzg-crypto/src/: lib.rs
crates/proof/: Cargo.toml
crates/proof/src/: cert_validity.rs  eigenda_blob_witness.rs  eigenda_preimage_witness.rs  eigenda_provider.rs  eigenda_witness.rs  errors.rs  hint.rs  journal.rs  lib.rs  pipeline.rs  preloaded_eigenda_provider.rs  recency.rs  witness.rs
crates/proof/src/canoe_verifier/: address_fetcher.rs  errors.rs  mod.rs  noop.rs  sp1_cc.rs  steel.rs
crates/registry/: Cargo.toml  README.md
crates/registry/src/: lib.rs
crates/sp1-bn-verifier/: Cargo.toml
crates/sp1-bn-verifier/src/: batch.rs  consts.rs  errors.rs  helpers.rs  lib.rs
crates/sp1-bn-verifier/tests/: parity.rs
crates/witgen/: Cargo.toml
crates/witgen-client/: Cargo.toml
crates/witgen-client/src/: lib.rs
crates/witgen/src/: canoe_witness_provider.rs  cert_validity_provider.rs  lib.rs  witness.rs  witness_provider.rs
crates/zkvm-verification/: Cargo.toml
crates/zkvm-verification/src/: lib.rs
docs/: README.md  canoe.md
example/canoe-on-sepolia/: Cargo.toml  README.md
example/canoe-on-sepolia/src/: main.rs
example/common-preloader/: Cargo.toml
example/common-preloader/src/: lib.rs
example/preloader/: Cargo.toml  README.md  justfile
example/preloader/src/: main.rs
steel-view-call/: README.md
steel-view-call/apps/: Cargo.toml  README.md
steel-view-call/apps/src/: apps.rs
steel-view-call/methods/: Cargo.toml  build.rs
steel-view-call/methods/contracts/: Elf.sol  ImageID.sol
steel-view-call/methods/guest/: Cargo.toml
