[package]
name = "canoe-verifier"
description = "Eigenda canoe verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
eigenda-cert.workspace = true
alloy-primitives = { workspace = true }
serde.workspace = true
thiserror.workspace = true

# canoe verifies the EigenDA cert via an L1 view-call on the reth-1.9.3 / revm-31
# stack (shared with risc0-steel and sp1-cc), which is alloy 1.x. These types must
# match reth's, so they are pinned to the reth-compatible versions rather than the
# workspace's alloy-2.x / revm-23 pins used on the Kona (L2) side.
revm-primitives = { version = "21.0.2", default-features = false }
reth-chainspec = { workspace = true }
reth-evm = { workspace = true }
alloy-genesis = { version = "1.6.3", default-features = false }
tracing = { workspace = true }