[package]
name = "hokulea-compute-proof"
version = "0.1.0"
edition = "2021"


[dependencies]
ark-bn254.workspace = true
rust-kzg-bn254-prover.workspace = true
rust-kzg-bn254-primitives.workspace = true
num.workspace = true
hokulea-proof.workspace = true
tracing.workspace = true

alloy-primitives.workspace = true

[build-dependencies]
ark-bn254 = { workspace = true }
rust-kzg-bn254-prover = { workspace = true }
