[package]
name = "hokulea-kzg-crypto"
version = "0.1.0"
edition = "2021"


[dependencies]
rust-kzg-bn254-verifier.workspace = true
rust-kzg-bn254-prover.workspace = true
rust-kzg-bn254-primitives.workspace = true
num.workspace = true
ark-bn254.workspace = true
ark-ff.workspace = true

tracing.workspace = true
alloy-primitives.workspace = true
thiserror.workspace = true