[package]
name = "hokulea-proof"
description = "Eigenda Proof SDK"
version = "0.1.0"
edition = "2021"

[dependencies]
kona-preimage.workspace = true
kona-proof.workspace = true

hokulea-eigenda.workspace = true

eigenda-cert.workspace = true
rust-kzg-bn254-primitives.workspace = true
rust-kzg-bn254-verifier.workspace = true

hokulea-sp1-bn-verifier = { workspace = true, optional = true }

ark-bn254.workspace = true
ark-ff.workspace = true

# Alloy
alloy-primitives.workspace = true

# General
async-trait.workspace = true
rkyv.workspace = true
serde.workspace = true
thiserror.workspace = true

# Canoe
canoe-verifier.workspace = true
canoe-verifier-address-fetcher.workspace = true

[dev-dependencies]
hokulea-compute-proof.workspace = true
rust-kzg-bn254-prover.workspace = true
num.workspace = true
tokio = { workspace = true, features = ["full"] }
spin.workspace = true

[features]
default = []
# Use the substrate-bn (sp1-patches/bn) batch KZG verifier instead of the arkworks-based
# rust-kzg-bn254-verifier. Intended for zkVM clients where the patched bn primitives win.
sp1-bn-verifier = ["dep:hokulea-sp1-bn-verifier"]
