[package]
name = "hokulea-proof"
description = "Eigenda Proof SDK"
version = "0.1.0"
edition = "2021"

[dependencies]
kona-preimage.workspace = true
kona-proof.workspace = true

hokulea-eigenda.workspace = true

eigenda-cert.workspace = true

# Arkworks-flavoured batch KZG verifier. Optional so the `sp1-bn-verifier` build doesn't drag
# arkworks into the dependency tree (rust-kzg-bn254-primitives transitively depends on
# ark-bn254/ark-ec/ark-ff/ark-serialize/ark-std/ark-poly).
rust-kzg-bn254-primitives = { workspace = true, optional = true }
rust-kzg-bn254-verifier = { workspace = true, optional = true }
ark-bn254 = { workspace = true, optional = true }
ark-ff = { workspace = true, optional = true }

hokulea-sp1-bn-verifier = { workspace = true, optional = true }

# Alloy
alloy-primitives.workspace = true

# General
async-trait.workspace = true
rkyv.workspace = true
serde.workspace = true
thiserror.workspace = true

# Canoe
canoe-verifier.workspace = true
canoe-verifier-address-fetcher.workspace = true

[dev-dependencies]
hokulea-compute-proof.workspace = true
rust-kzg-bn254-prover.workspace = true
num.workspace = true
tokio = { workspace = true, features = ["full"] }
spin.workspace = true

[features]
default = ["ark"]
# Arkworks-based batch KZG verifier (`rust-kzg-bn254-verifier`). Default backend.
ark = ["dep:rust-kzg-bn254-primitives", "dep:rust-kzg-bn254-verifier", "dep:ark-bn254", "dep:ark-ff"]
# Use the substrate-bn (sp1-patches/bn) batch KZG verifier. Intended for zkVM clients where
# the patched bn primitives win. When both `ark` and `sp1-bn-verifier` are enabled,
# `sp1-bn-verifier` takes precedence — opt-in to the zkVM-cheap path is honoured.
sp1-bn-verifier = ["dep:hokulea-sp1-bn-verifier"]
