[package]
name = "hokulea-sp1-bn-verifier"
description = "EigenDA KZG batch verifier built on the sp1-patches/bn fork of substrate-bn (no_std, zkVM-friendly)."
version = "0.1.0"
edition = "2021"

[dependencies]
substrate-bn = { git = "https://github.com/sp1-patches/bn", tag = "patch-0.6.0-sp1-6.0.0-substrate-bn" }

eigenda-cert.workspace = true

alloy-primitives.workspace = true
sha2.workspace = true
spin.workspace = true
thiserror.workspace = true

[dev-dependencies]
ark-bn254.workspace = true
ark-ff.workspace = true
rust-kzg-bn254-primitives.workspace = true
rust-kzg-bn254-prover.workspace = true
rust-kzg-bn254-verifier.workspace = true
hokulea-compute-proof.workspace = true
hokulea-eigenda.workspace = true
num.workspace = true
substrate-bn = { git = "https://github.com/sp1-patches/bn", tag = "patch-0.6.0-sp1-6.0.0-substrate-bn" }
