[package]
name = "hokulea-example-preloader"
version = "0.1.0"
edition = "2021"


[dependencies]
hokulea-client.workspace = true
hokulea-compute-proof.workspace = true
hokulea-host-bin.workspace = true
hokulea-proof.workspace = true
hokulea-witgen.workspace = true
hokulea-zkvm-verification.workspace = true

# General
anyhow.workspace = true
cfg-if.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true

kona-client.workspace = true
kona-genesis.workspace = true
kona-preimage.workspace = true
kona-proof.workspace = true

# Execution
alloy-evm.workspace = true
alloy-op-evm.workspace = true
# Only the `sp1-cc` feature path uses this — to build the L1 RpcClient for
# CanoeSp1CCReducedProofProvider, which lives on the reth-1.9.3 / alloy-1.x stack.
# Pinned to 1.6.x rather than the workspace's alloy-2.x so the RpcClient types match.
alloy-rpc-client = { version = "1.6.3", default-features = false }
op-alloy-consensus.workspace = true
op-revm.workspace = true
revm.workspace = true

canoe-provider.workspace = true
canoe-sp1-cc-host = { workspace = true, optional = true }
canoe-steel-apps = { workspace = true, optional = true }
canoe-steel-verifier = { workspace = true, optional = true }
canoe-verifier-address-fetcher.workspace = true
canoe-verifier.workspace = true

sp1-sdk = {workspace = true}

[features]
sp1-cc = ["canoe-sp1-cc-host"]
steel = ["canoe-steel-apps", "canoe-steel-verifier"]
# Route batch KZG verification through hokulea-sp1-bn-verifier (substrate-bn / sp1-patches)
# instead of the default arkworks backend. Exercises the same code path the zkVM client uses.
sp1-bn = ["hokulea-proof/sp1-bn"]

