[package]
name = "canoe-sp1-cc-client"
description = ""
edition = "2021"

[dependencies]
sp1-cc-client-executor = { git = "https://github.com/succinctlabs/sp1-contract-call.git", rev = "dad9b9ce41febf0dbd408b350d909a8800ba89e2" }

# alloy
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-sol-types.workspace = true
canoe-bindings = { workspace = true }
canoe-provider = { workspace = true }

# sp1
sp1-zkvm = { workspace = true, features = ["default"] }

# misc
bincode = "1.3.3"