[package]
version = "0.1.0"
name = "canoe-sp1-cc-host"
edition = "2021"

[dependencies]
rsp-primitives.workspace = true
sp1-cc-client-executor.workspace = true
sp1-cc-host-executor.workspace = true

alloy-primitives.workspace = true
alloy-sol-types.workspace = true
bincode.workspace = true

alloy-rpc-client.workspace = true
alloy-rpc-types.workspace = true
anyhow.workspace = true
async-trait.workspace = true
canoe-bindings.workspace = true
canoe-provider.workspace = true

# misc:
tracing.workspace = true

# sp1
sp1-core-executor.workspace = true
sp1-prover.workspace = true
sp1-sdk.workspace = true
