[package]
version = "0.1.0"
name = "canoe-sp1-cc-host"
edition = "2021"

[dependencies]
sp1-cc-client-executor.workspace = true
sp1-cc-host-executor.workspace = true

# sp1-cc runs on the reth-1.9.3 / alloy-1.x stack (sp1-cc tag reth-1.9.3-sp1-6.1.0),
# so these alloy crates are pinned to the steel/sp1-compatible 1.6.x versions rather
# than the workspace's alloy-2.x pins used on the Kona (L2) side.
alloy-genesis = { version = "1.6.3", default-features = false }
alloy-primitives.workspace = true
alloy-rpc-client = { version = "1.6.3", default-features = false }
alloy-rpc-types = { version = "1.6.3", default-features = false }
alloy-sol-types.workspace = true
anyhow.workspace = true
async-trait.workspace = true
bincode.workspace = true
canoe-bindings.workspace = true
canoe-provider.workspace = true
serde_json.workspace = true

# misc:
tracing.workspace = true

# sp1
sp1-hypercube.workspace = true
sp1-primitives.workspace = true
sp1-sdk.workspace = true
