[package]
name = "canoe-steel-methods"
version = "0.1.0"
edition = "2021"

[package.metadata.risc0]
methods = ["guest"]

[build-dependencies]
hex = { workspace = true }
risc0-build = { workspace = true }
risc0-build-ethereum = { workspace = true }
risc0-zkp = { workspace = true }

[features]
default = []
steel = []
