[package]
name = "dacert-v2-verifier-guests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dacert_v2_verifier"
path = "src/bin/dacert_v2_verifier.rs"

[workspace]

[dependencies]
alloy-primitives = { version = "0.8" }
alloy-sol-types = { version = "0.8" }
risc0-steel = { path = "../../../../my-risc0-ethereum/steel", default-features = false }
risc0-zkvm = { version = "1.2.0", default-features = false, features = ["std"] }

[patch.crates-io]
# use optimized risc0 circuit
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.3-risczero.0" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
